<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_title_log_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_type" />

        <TextView
            android:id="@+id/tv_log_type"
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/purple"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_title_log_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_date" />

        <TextView
            android:id="@+id/tv_log_date"
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/purple"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_title_log_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_username" />

        <TextView
            android:id="@+id/tv_log_username"
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/purple"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_title_log_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_comment" />

        <TextView
            android:id="@+id/tv_log_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>